--- a/Carnival/CarnivalRestaurant/app/src/main/AndroidManifest.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,12 @@
         android:theme="@style/Theme.CarnivalRestaurant"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.AddCartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.sample"
+            android:exported="false" />
         <activity
             android:name=".activity.DetailsActivity"
             android:exported="false" />
